--- a/.github/workflows/publish_package.yml
+++ b/.github/workflows/publish_package.yml
@@ -1,11 +1,9 @@
 name: Publish Package
 on:
-  workflow_run:
-    workflows:
-      - "Version and tag"
-    types:
-      - completed
   workflow_dispatch:
+  push:
+    branches:
+      - main
 
 jobs:
   publish:
@@ -17,9 +15,9 @@ jobs:
           persist-credentials: false
       - uses: actions/setup-node@v4
         with:
-          node-version: "20"
+          node-version: '20'
           registry-url: https://npm.pkg.github.com/
-          scope: "@mydobie"
+          scope: '@mydobie'
 
       - name: Install dependencies
         run: npm i
@@ -34,28 +32,28 @@ jobs:
       #     GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       #     NODE_AUTH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
-      - name: Build Artifact
-        run: node utils/createArchive.js
+      # - name: Build Artifact
+      #   run: node utils/createArchive.js
 
-      - name: Get package info
-        id: package
-        uses: codex-team/action-nodejs-package-info@v1.1
+      # - name: Get package info
+      #   id: package
+      #   uses: codex-team/action-nodejs-package-info@v1.1
 
-      - name: Upload binaries to release
-        uses: svenstaro/upload-release-action@v2
-        with:
-          repo_token: ${{ secrets.GITHUB_TOKEN }}
-          # See utils/createArchive.js for the directory and name of file
-          file: archive/${{steps.package.outputs.name}}-${{ steps.package.outputs.version}}.tgz
-          tag: v${{steps.package.outputs.version}}
+      # - name: Upload binaries to release
+      #   uses: svenstaro/upload-release-action@v2
+      #   with:
+      #     repo_token: ${{ secrets.GITHUB_TOKEN }}
+      #     # See utils/createArchive.js for the directory and name of file
+      #     file: archive/${{steps.package.outputs.name}}-${{ steps.package.outputs.version}}.tgz
+      #     tag: v${{steps.package.outputs.version}}
 
-      - name: Build demo pages
-        run: npm run build:demo
+      - name: Build demo
+        run: npm run build:ci
 
       - name: Deploy to GH pages
         uses: JamesIves/github-pages-deploy-action@v4
         with:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          BRANCH: gh-pages
-          FOLDER: dist
-          CLEAN: true
+          token: ${{ secrets.GITHUB_TOKEN }}
+          branch: gh-pages
+          folder: dist
+          clean: true
