--- a/package.json
+++ b/package.json
@@ -1,19 +1,15 @@
 {
-  "name": "simple-vite-react-app",
+  "name": "mystery",
   "private": true,
-  "version": "0.0.0",
+  "version": "1.0.0",
   "type": "module",
   "engines": {
     "node": "20 || 22"
   },
   "scripts": {
-    "dev": " vite",
-    "dev:demo": "USE_DEMO=true vite",
-    "dev:mock": "USE_MOCK=true vite",
-    "build:ci": "vite build",
+    "dev": "USE_HASH=true vite",
+    "build:ci": "USE_HASH=true vite build",
     "build": "npm run lint && npm run build:ci",
-    "build:demo": "npm run lint &&  USE_DEMO=true USE_HASH=true npm run build:ci ",
-    "build:mock": " npm run lint && USE_MOCK=true npm run build:ci",
     "format": "prettier --ignore-path ./.eslintignore --check 'src/**/*.{js,jsx,ts,tsx,css,scss,md,json,html}' ",
     "format:fix": "prettier --ignore-path ./.eslintignore --write 'src/**/*.{js,jsx,ts,tsx,css,scss,md,json,html}' ",
     "lint": "tsc && npm run format && npm run lint:css && eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0 && echo CODE ALL LINTED!",
@@ -32,38 +28,30 @@
     "cypress:run": "cypress run"
   },
   "dependencies": {
-    "@tanstack/react-query": "^5.90.2",
-    "axios": "^1.12.2",
     "bootstrap": "^5.3.8",
-    "prismjs": "^1.30.0",
     "react": "^18.3.0",
     "react-bootstrap": "^2.10.10",
     "react-bootstrap-icons": "^1.11.6",
-    "react-copy-to-clipboard": "^5.1.0",
     "react-dom": "^18.3.0",
+    "react-hook-form": "^7.63.0",
     "react-router": "^7.9.2",
-    "react-router-dom": "^7.9.2",
-    "styled-components": "^6.1.19"
+    "react-router-dom": "^7.9.2"
   },
   "devDependencies": {
-    "@testing-library/cypress": "^10.1.0",
-    "@testing-library/jest-dom": "^6.8.0",
+    "@testing-library/dom": "^10.4.1",
+    "@testing-library/jest-dom": "^6.9.1",
     "@testing-library/react": "^16.3.0",
     "@testing-library/user-event": "^14.6.1",
     "@types/jest": "^30.0.0",
     "@types/jest-axe": "^3.5.9",
     "@types/node": "^24.5.2",
-    "@types/prismjs": "^1.26.5",
-    "@types/react": "^19.1.13",
-    "@types/react-copy-to-clipboard": "^5.0.7",
-    "@types/react-dom": "^19.1.9",
+    "@types/react": "^19.2.0",
+    "@types/react-dom": "^19.2.0",
     "@typescript-eslint/eslint-plugin": "^8.44.1",
     "@typescript-eslint/parser": "^8.44.1",
     "@vitejs/plugin-react": "^5.0.3",
     "axe-core": "^4.10.3",
     "axios-mock-adapter": "^2.1.0",
-    "cypress": "^15.3.0",
-    "cypress-axe": "^1.7.0",
     "eslint": "^9.36.0",
     "eslint-config-prettier": "^10.1.8",
     "eslint-plugin-cypress": "^5.1.1",
